# duckdb-aws

./: CMakeLists.txt  Makefile  README.md  extension_config.cmake  vcpkg.json
.github/workflows/: MainDistributionPipeline.yml  MinioTests.yml
scripts/: create_minio_credential_file.sh  duckdb-oidc-test.sh  install_and_run_httpfs_s3_test_server.sh  run_minio_aws_env  set_s3_test_server_variables.sh
src/: arn_storage.cpp  aws_extension.cpp  aws_http_client.cpp  aws_secret.cpp  cfn_functions.cpp  cloudformation_functions.cpp  quack_on_ec2_resource.cpp
src/include/: arn_storage.hpp  aws_client.hpp  aws_extension.hpp  aws_http_client.hpp  aws_secret.hpp  cfn_functions.hpp  cloudformation_functions.hpp  quack_on_ec2_resource.hpp
src/include/rds/: rds_utils.hpp
src/include/redshift/: redshift_utils.hpp
src/include/utils/: region_utils.hpp  utils.hpp
src/rds/: rds_storage.cpp  rds_utils.cpp
src/redshift/: redshift_storage.cpp  redshift_utils.cpp
src/utils/: region_utils.cpp  utils.cpp
test/sql/: aws_errors.test  aws_minio.test  aws_minio_secret.test  aws_secret.test  aws_secret_aws.test  aws_secret_chains.test  aws_secret_chains_minio.test  aws_secret_external_id.test  aws_secret_gcs.test  aws_secret_r2.test  aws_secret_rds.test  aws_secret_redaction.test  aws_secret_region_warning.test  aws_secret_sts_provider.test  aws_secret_validation.test  aws_sts_secret_profile.test  aws_test_epoch.test  cfn_functions.test  cloudformation_functions.test  test_eu_south_2.test
test/sql/env/: aws_env_var.test  aws_secret_chains_env.test  aws_secret_refresh.test  aws_secret_web_identity_env.test
test/sql/env/proxy/: aws_secret_http_proxy.test  aws_secret_http_proxy_with_auth.test
test/sql/rds/: aws_rds_connect.test
test/sql/redshift/: aws_secret_redshift.test  aws_secret_redshift_simple.test  test_redshift_attach.test  test_redshift_with_postgres_attach.test
